test/types/string/bradc/string2ints/badstring2int2.chpl
var s = "a1";

var x = s:int;
writeln("x is: ", x);

